Fix text alignment

--- a/register_slc/static/css/master.css
+++ b/register_slc/static/css/master.css
@@ -284,7 +284,6 @@ h6{
 }
 
 .session {
-	text-align: center;
 	background-color: #FFF;
 	border: 1px solid #999;
 	border: 1px solid rgba(0, 0, 0, 0.3);
@@ -297,7 +296,7 @@ h6{
 .session-body {
 	padding: 10px 15px;
 	font-size: 13px;
-	text-align: justify;
+	text-align: left;
 }
 
 .session-footer {
@@ -309,6 +308,7 @@ h6{
 	text-decoration: none;
 	color: white;
 	font-weight: bold;
+	text-align: center;
 }
 
 .session-footer.full {
